--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node ./build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,11 @@
     "graphql": "^15.5.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.28",
     "eslint": "^7.20.0",
-    "prisma": "^2.17.0"
+    "nodemon": "^2.0.7",
+    "prisma": "^2.17.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
