--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node ./build/index.js"
+    "start": "node -r dotenv/config ./build/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.21.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.5.0"
   },
   "devDependencies": {
