--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node -r dotenv/config ./build/index.js"
+    "server": "node -r dotenv/config ./build/server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^6.2.7",
+    "@graphql-tools/load": "^6.2.7",
+    "@prisma/client": "^2.17.0",
     "apollo-server-express": "^2.21.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.28",
+    "apollo": "^2.32.5",
     "eslint": "^7.20.0",
     "nodemon": "^2.0.7",
     "prisma": "^2.17.0",
