--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "new_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "server": "node -r dotenv/config ./build/server/index.js"
+    "server:dev": "nodemon --config ./nodemon.json -r dotenv/config ./build/server/index.js"
   },
   "keywords": [],
   "author": "",
