--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "new_backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./build/server/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "server:dev": "nodemon --config ./nodemon.json -r dotenv/config ./build/server/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@graphql-tools/graphql-file-loader": "^6.2.7",
-    "@graphql-tools/load": "^6.2.7",
-    "@prisma/client": "^2.17.0",
-    "apollo-server-express": "^2.21.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.28",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "apollo": "^2.32.5",
-    "eslint": "^7.20.0",
-    "nodemon": "^2.0.7",
-    "prisma": "^2.17.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.5"
-  }
+    "name": "new_backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "./build/server/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc",
+        "server:dev": "nodemon --config ./nodemon.json -r dotenv/config ./build/server/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@graphql-tools/graphql-file-loader": "^6.2.7",
+        "@graphql-tools/load": "^6.2.7",
+        "@prisma/client": "^2.17.0",
+        "apollo-server-express": "^2.21.0",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "graphql": "^15.5.0"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.28",
+        "@typescript-eslint/eslint-plugin": "^4.15.1",
+        "@typescript-eslint/parser": "^4.15.1",
+        "apollo": "^2.32.5",
+        "eslint": "^7.20.0",
+        "eslint-config-prettier": "^8.0.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "nodemon": "^2.0.7",
+        "prettier": "^2.2.1",
+        "prisma": "^2.17.0",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.1.5"
+    }
 }
