--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
         "@graphql-tools/load": "^6.2.7",
         "@prisma/client": "^2.17.0",
         "apollo-server-express": "^2.21.0",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "graphql": "^15.5.0"
+        "graphql": "^15.5.0",
+        "helmet": "^4.4.1"
     },
     "devDependencies": {
         "@types/node": "^14.14.28",
