Fix TS type issues in the code

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
         "@graphql-tools/graphql-file-loader": "^6.2.7",
         "@graphql-tools/load": "^6.2.7",
         "@prisma/client": "^2.17.0",
+        "@types/hpp": "^0.2.1",
         "apollo-server-express": "^2.21.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "graphql": "^15.5.0",
         "helmet": "^4.4.1",
+        "hpp": "^0.2.3",
         "log4js": "^6.3.0",
         "node-mailjet": "^3.3.1"
     },
