--- a/package.json
+++ b/package.json
@@ -17,14 +17,23 @@
         "@graphql-tools/load": "^6.2.7",
         "@prisma/client": "^2.17.0",
         "apollo-server-express": "^2.21.0",
+        "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "graphql": "^15.5.0",
-        "helmet": "^4.4.1"
+        "helmet": "^4.4.1",
+        "jsonwebtoken": "^8.5.1",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
         "@types/node": "^14.14.28",
+        "@types/passport": "^1.0.6",
+        "@types/passport-jwt": "^3.0.5",
+        "@types/passport-local": "^1.0.33",
         "@typescript-eslint/eslint-plugin": "^4.15.1",
         "@typescript-eslint/parser": "^4.15.1",
         "apollo": "^2.32.5",
