--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "express": "^4.17.1",
         "graphql": "^15.5.0",
         "helmet": "^4.4.1",
+        "joi": "^17.4.0",
         "jsonwebtoken": "^8.5.1",
+        "log4js": "^6.3.0",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0"
