--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dependencies": {
         "@graphql-tools/graphql-file-loader": "^6.2.7",
         "@graphql-tools/load": "^6.2.7",
-        "@prisma/client": "^2.17.0",
+        "@prisma/client": "^2.18.0",
         "apollo-server-express": "^2.21.0",
         "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
@@ -26,6 +26,7 @@
         "joi": "^17.4.0",
         "jsonwebtoken": "^8.5.1",
         "log4js": "^6.3.0",
+        "node-mailjet": "^3.3.1",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0"
@@ -33,6 +34,7 @@
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/node": "^14.14.28",
+        "@types/node-mailjet": "^3.3.4",
         "@types/passport": "^1.0.6",
         "@types/passport-jwt": "^3.0.5",
         "@types/passport-local": "^1.0.33",
@@ -44,7 +46,7 @@
         "eslint-plugin-prettier": "^3.3.1",
         "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
-        "prisma": "^2.17.0",
+        "prisma": "^2.18.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.5"
     }
