--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@prisma/client": "^2.17.0",
         "@types/hpp": "^0.2.1",
         "apollo-server-express": "^2.21.0",
+        "chai": "^4.3.4",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
