--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "./build/server/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "TS_NODE_FILES=true mocha -r ts-node/register './tests/**/*.test.ts' --exit",
         "build": "tsc",
         "server:dev": "nodemon --config ./nodemon.json -r dotenv/config ./server/index.ts ",
         "migration:dev": "prisma migrate dev --preview-feature"
@@ -16,7 +16,9 @@
         "@graphql-tools/graphql-file-loader": "^6.2.7",
         "@graphql-tools/load": "^6.2.7",
         "@prisma/client": "^2.17.0",
+        "@types/chai": "^4.2.16",
         "@types/hpp": "^0.2.1",
+        "@types/mocha": "^8.2.2",
         "apollo-server-express": "^2.21.0",
         "chai": "^4.3.4",
         "cors": "^2.8.5",
@@ -26,6 +28,7 @@
         "helmet": "^4.4.1",
         "hpp": "^0.2.3",
         "log4js": "^6.3.0",
+        "mocha": "^8.3.2",
         "node-mailjet": "^3.3.1"
     },
     "devDependencies": {
