--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "apollo-server-express": "^2.21.0",
         "bcrypt": "^5.0.1",
         "chai": "^4.3.4",
+        "chai-http": "^4.3.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
