Include Secret Keys

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,13 @@ jobs:
         with:
           cmd: build # will run `yarn build` command
       - uses: borales/actions-yarn@v2.0.0
+        env:
+         ACCESS_TOKEN_KEY : ${{ secrets.ACCESS_TOKEN_KEY }}
+         REFRESH_TOKEN_KEY : ${{ secrets.REFRESH_TOKEN_KEY }}
+         DATABASE_URL : ${{ secrets.DATABASE_URL }}
+         PORT : ${{ secrets.PORT }}
+         MAILJET_API : ${{ secrets.MAILJET_API }}
+         MAILJET_SECRET : ${{ secrets.MAILJET_SECRET }}
+         MAILJET_SMS_API : ${{ secrets.MAILJET_SMS_API }}
         with:
           cmd: test # will run `yarn test` command
