--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,15 +45,5 @@ jobs:
         env:
          DATABASE_URL : ${{ secrets.DATABASE_URL }}
         with:
-          cmd: migrate # will run `yarn migrate` command
+          cmd: printenv
           
-      - uses: borales/actions-yarn@v2.0.0
-        env:
-         ACCESS_TOKEN_KEY : ${{ secrets.ACCESS_TOKEN_KEY }}
-         REFRESH_TOKEN_KEY : ${{ secrets.REFRESH_TOKEN_KEY }}
-         DATABASE_URL : ${{ secrets.DATABASE_URL }}
-         MAILJET_API : ${{ secrets.MAILJET_API }}
-         MAILJET_SECRET : ${{ secrets.MAILJET_SECRET }}
-         MAILJET_SMS_API : ${{ secrets.MAILJET_SMS_API }}
-        with:
-          cmd: test # will run `yarn test` command
