--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "tsc && TS_NODE_FILES=true mocha -r ts-node/register './tests/**/*.test.ts' --exit",
         "build": "tsc",
         "server:dev": "nodemon --config ./nodemon.json -r dotenv/config ./server/index.ts ",
-        "migrate": "prisma migrate dev --preview-feature"
+        "migration:dev": "prisma migrate dev --preview-feature"
     },
     "keywords": [],
     "author": "",
