--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "tsc && TS_NODE_FILES=true mocha -r ts-node/register './tests/**/*.test.ts' './tests/testTeardown.ts' --exit",
         "build": "tsc",
         "server:dev": "nodemon --config ./nodemon.json -r dotenv/config ./server/index.ts ",
-        "migration:dev": "prisma migrate dev --preview-feature"
+        "migration:dev": "prisma migrate dev --preview-feature && prisma generate"
     },
     "keywords": [],
     "author": "",
@@ -15,7 +15,7 @@
     "dependencies": {
         "@graphql-tools/graphql-file-loader": "^6.2.7",
         "@graphql-tools/load": "^6.2.7",
-        "@prisma/client": "^2.19.0",
+        "@prisma/client": "^2.20.0",
         "@types/chai": "^4.2.16",
         "@types/hpp": "^0.2.1",
         "@types/mocha": "^8.2.2",
@@ -33,7 +33,7 @@
         "jsonwebtoken": "^8.5.1",
         "log4js": "^6.3.0",
         "mocha": "^8.3.2",
-        "node-mailjet": "^3.3.1",
+        "node-mailjet": "^3.0.5",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0"
@@ -53,7 +53,7 @@
         "eslint-plugin-prettier": "^3.3.1",
         "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
-        "prisma": "^2.19.0",
+        "prisma": "^2.21.2",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.5"
     }
