--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,17 @@ services:
             context: .
             dockerfile: docker/Dockerfile-Server
         volumes:
-            - ./:/code
-            - ./:/app
+            - ./src:/app
         container_name: docker-server
         restart: unless-stopped
         ports:
             - 5000:5000
         environment:
-            - DATABASE_URL=postgresql://user:user@localhost:5001/coronaschool-dev-new
+            - DATABASE_URL=postgresql://user:user@postgres:5432/coronaschool-dev-new
             - PORT=5000
             - NODE_ENV=dev
+            - ACCESS_TOKEN_KEY=test
+            - REFRESH_TOKEN_KEY=test
         command: npx nodemon --watch /app app/server/index.ts
         depends_on:
             - postgres
