--- a/docker/Dockerfile-Migration
+++ b/docker/Dockerfile-Migration
@@ -1,9 +1,9 @@
 FROM node:15
 
-WORKDIR /app
+WORKDIR .
 
 RUN npm install -g prisma
 
-ADD ./prisma/ ./prisma/
+ADD ./src/prisma/ ./prisma/
 
 CMD ["prisma", "migrate", "dev", "--preview-feature"]
