--- a/docker/Dockerfile-Server
+++ b/docker/Dockerfile-Server
@@ -3,7 +3,9 @@ FROM node:15
 WORKDIR .
 
 COPY ./package*.json ./
+COPY ./src/prisma ./prisma/
 
 RUN npm install
+RUN npx prisma generate
 
 COPY . .
