--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "./build/server/index.js",
     "scripts": {
-        "test": "tsc && TS_NODE_FILES=true mocha -r ts-node/register './tests/**/*.test.ts' --exit",
+        "test": "tsc && mocha -r ts-node/register './tests/**/*.test.ts' --exit",
         "build": "tsc",
         "server:dev": "nodemon --config ./nodemon.json -r dotenv/config ./server/index.ts ",
         "migration:dev": "prisma migrate dev --preview-feature"
@@ -15,10 +15,8 @@
     "dependencies": {
         "@graphql-tools/graphql-file-loader": "^6.2.7",
         "@graphql-tools/load": "^6.2.7",
-        "@prisma/client": "^2.21.2",
-        "@types/chai": "^4.2.16",
+        "@prisma/client": "^2.22.0",
         "@types/hpp": "^0.2.1",
-        "@types/mocha": "^8.2.2",
         "apollo-server-express": "^2.21.0",
         "bcrypt": "^5.0.1",
         "chai": "^4.3.4",
@@ -41,8 +39,10 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
+        "@types/chai": "^4.2.17",
         "@types/cors": "^2.8.8",
-        "@types/node": "^14.14.28",
+        "@types/mocha": "^8.2.2",
+        "@types/node": "^14.14.44",
         "@types/node-mailjet": "^3.3.4",
         "@types/passport": "^1.0.6",
         "@types/passport-jwt": "^3.0.5",
@@ -54,7 +54,7 @@
         "eslint-plugin-prettier": "^3.3.1",
         "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
-        "prisma": "^2.21.2",
+        "prisma": "^2.22.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.5"
     }
