--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@typescript-eslint/eslint-plugin": "^4.15.1",
         "@typescript-eslint/parser": "^4.15.1",
         "apollo": "^2.32.5",
+        "chai-as-promised": "^7.1.1",
         "eslint": "^7.20.0",
         "eslint-config-prettier": "^8.0.0",
         "eslint-plugin-prettier": "^3.3.1",
